src/objects/DevApp_Deleted_Records__c.object
<CustomObject>
    <description>This object is the repository of &quot;deleted&quot; Device-App records.

This allows us to track all Device-App relationships that have been deleted, and send to MotoPDM.</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>AccountName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AcctOwner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DevApp_Deleted_Recordss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApplicationName__c</fullName>
        <label>ApplicationName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_ID__c</fullName>
        <label>Application_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_SFID__c</fullName>
        <label>Application_SFID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeletedRecord__c</fullName>
        <label>DeletedRecord</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deleted_By__c</fullName>
        <label>Deleted_By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deleted_Date__c</fullName>
        <label>Deleted_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DevApp_ID__c</fullName>
        <externalId>true</externalId>
        <label>DevApp_ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DeviceName__c</fullName>
        <label>DeviceName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_ID__c</fullName>
        <label>Device_ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_SFID__c</fullName>
        <label>Device_SFID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_Date__c</fullName>
        <label>SA_Date</label>
        <type>Date</type>
    </fields>
    <label>DevApp_Deleted_Records</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DeletedRecord__c</columns>
        <columns>Deleted_Date__c</columns>
        <columns>Deleted_By__c</columns>
        <columns>DeviceName__c</columns>
        <columns>Device_ID__c</columns>
        <columns>SA_Date__c</columns>
        <columns>ApplicationName__c</columns>
        <columns>Application_ID__c</columns>
        <columns>AccountName__c</columns>
        <columns>DevApp_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All_BCC</label>
    </listViews>
    <nameField>
        <label>DevApp_Deleted_Records Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DevApp_Deleted_Recordss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>